src/core/config/transformer/consolidate_url/snapshots/tailcall__core__config__transformer__consolidate_url__consolidate_url__test__should_generate_upstream_base_url_when_all_http_directive_has_same_base_url.snap
---
source: src/core/config/transformer/consolidate_url/consolidate_url.rs
expression: transformed_config.to_sdl()
---
schema @server @upstream(baseURL: "https://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  f1: [Int] @http(path: "/users")
  f2: [Int] @http(path: "/post")
  f3: [Int] @http(path: "/todos")
}
