src/core/config/transformer/consolidate_url/snapshots/tailcall__core__config__transformer__consolidate_url__consolidate_url__test__should_not_generate_upstream_base_url_when_all_http_directive_has_same_base_url.snap
---
source: src/core/config/transformer/consolidate_url/consolidate_url.rs
expression: transformed_config.to_sdl()
---
schema @server @upstream {
  query: Query
}

type Query {
  f1: [Int] @http(baseURL: "https://jsonplaceholder-1.typicode.com", path: "/users")
  f2: [Int] @http(baseURL: "https://jsonplaceholder-2.typicode.com", path: "/post")
  f3: [Int] @http(baseURL: "https://jsonplaceholder-3.typicode.com", path: "/todos")
}
