src/core/config/transformer/consolidate_url/snapshots/tailcall__core__config__transformer__consolidate_url__consolidate_url__test__should_not_generate_upstream_when_threshold_is_not_matched.snap
---
source: src/core/config/transformer/consolidate_url/consolidate_url.rs
expression: transformed_config.to_sdl()
---
schema @server(hostname: "0.0.0.0", port: 8000) @upstream(httpCache: 42) {
  query: Query
}

type Post {
  body: String!
  id: Int!
  title: String!
  user: User @http(baseURL: "http://jsonplaceholder-2.typicode.com", path: "/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  post(id: Int!): Post @http(baseURL: "http://jsonplaceholder-1.typicode.com", path: "/posts/{{.args.id}}")
  posts: [Post] @http(baseURL: "http://jsonplaceholder-1.typicode.com", path: "/posts")
  user(id: Int!): User @http(baseURL: "http://jsonplaceholder-3.typicode.com", path: "/users/{{.args.id}}")
  users: [User] @http(baseURL: "http://jsonplaceholder-2.typicode.com", path: "/users")
}

type User {
  email: String!
  id: Int!
  name: String!
  phone: String
  username: String!
  website: String @expr(body: "/users/website/{{.value.username}}")
}
